Negotiation - Hide the Document Description Pane using a Parameter and Default the Value of the document description.